# dehalogenases

./: QUICKSTART.md  README.md  config.py  example.py  examples.py  pyproject.toml  requirements.txt  run_pipeline.py
data/: 3BJX_sequence.fasta  combined_sequences.fasta  homologs.fasta
results/: alignment.fasta
src/: __init__.py  blast_search.py  fetch_pdb_sequence.py  generate_msa.py  visualize_msa.py
src/dehalogenases/: __init__.py  analysis.py  sequence.py
tests/: __init__.py  test_analysis.py  test_sequence.py
